# DevCourse_Projects

Autonomous_Driving_on_MORAI_Sim_Project_Team1/: README.md
Lane_Change_Intention_Trajectory_Prediction_Project/devel/: .catkin  .rosinstall  local_setup.sh
Lane_Change_Intention_Trajectory_Prediction_Project/launch/: day.launch  week.launch
Serving_Robot_Simulation_Project_Team4/: README.md
Serving_Robot_Simulation_Project_Team4/final_project/: CMakeLists.txt  package.xml
Serving_Robot_Simulation_Project_Team4/final_project/config/: amcl_params.yaml  costmap_common.yaml
Serving_Robot_Simulation_Project_Team4/final_project/include/final_project/: custom_follow_waypoints.hpp
Serving_Robot_Simulation_Project_Team4/final_project/launch/: main.launch  navigation.launch  start_follow_waypoints.launch  turtlebot3_remote.launch  turtlebot3_slam.launch  view_mapping.launch
Serving_Robot_Simulation_Project_Team4/final_project/launch/includes/: description.launch.xml
Serving_Robot_Simulation_Project_Team4/final_project/map/: my_map.yaml
Serving_Robot_Simulation_Project_Team4/final_project/param/: param.yaml
Serving_Robot_Simulation_Project_Team4/final_project/rviz/: navigation.rviz  turtlebot3_slam.rviz
Serving_Robot_Simulation_Project_Team4/final_project/scripts/: custom_follow_waypoints.py  moving.py
Serving_Robot_Simulation_Project_Team4/final_project/src/: custom_follow_waypoints.cpp  moving.cpp
Serving_Robot_Simulation_Project_Team4/final_project/worlds/: costa_coffee_mod.world
(+17 files in other folders)
